--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "name": "school-control-mvc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
